--- a/ArchivPoznamek/ArchivPoznamek/Views/Shared/_Layout.cshtml
+++ b/ArchivPoznamek/ArchivPoznamek/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - ArchivPoznamek</a>
+            &copy; 2022 - ArchivPoznamek
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
