Přidán email v registraci

--- a/ArchivPoznamek/ArchivPoznamek/Views/Uzivatel/Prihlasit.cshtml
+++ b/ArchivPoznamek/ArchivPoznamek/Views/Uzivatel/Prihlasit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <form action="/Uzivatel/Prihlasit" method="post">
-    <input type="text" name="jmeno" placeholder="Jméno..." /><br />
-    <input type="password" name="heslo" placeholder="Heslo..." /><br />
+    <input required type="text" name="jmeno" placeholder="Jméno..." /><br />
+    <input required type="password" name="heslo" placeholder="Heslo..." /><br />
     <input type="submit" value="Přihlásit" />
 </form>
