--- a/ArchivPoznamek/ArchivPoznamek/Views/Poznamky/Pridat.cshtml
+++ b/ArchivPoznamek/ArchivPoznamek/Views/Poznamky/Pridat.cshtml
@@ -12,7 +12,7 @@
         <input required type="text" name="nadpis" placeholder="Název poznámky" />
         <input required type="text" name="obsah" placeholder="Obsah poznámky" />
         <br/>
-        <label for="dulezity">Je úkol důležitý?</label>
+        <label for="dulezity">Je poznámka důležitá?</label>
         <input name="dulezity" type="checkbox" value="ano" />
         <br />
         <br/>
