--- a/ArchivPoznamek/ArchivPoznamek/Views/Poznamky/Vypsat.cshtml
+++ b/ArchivPoznamek/ArchivPoznamek/Views/Poznamky/Vypsat.cshtml
@@ -38,7 +38,7 @@ else
                 @: <div class="poznamka">
             }
 
-                <h3><a href="/Poznamky/Poznamka/@poznamka.Id">@poznamka.Nadpis</a></h3>
+                <h3><a href="/Poznamky/Detail/@poznamka.Id">@poznamka.Nadpis</a></h3>
                 <p>@poznamka.DatumVlozeni</p>
                 <a href="/Poznamky/Smazat/@poznamka.Id">Smazat</a>
             @: </div>
