--- a/ArchivPoznamek/ArchivPoznamek/Views/Shared/_Layout.cshtml
+++ b/ArchivPoznamek/ArchivPoznamek/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                         else
                         {
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Uzivatel" asp-action="Odstranit">Odstranit účet</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Uzivatel" asp-action="Odhlasit">Odhlásit</a>
                             </li>
                         }
